k8s/example-sevice-http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-sevice-http
spec:
  selector:
    app: example-sevice-http
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
