k8s/example-sevice-http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-sevice-http
spec:
  ingressClassName: nginx
  rules:
    - host: "prj-1774374064673971563.84.201.145.23.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-sevice-http
                port:
                  number: 8080
